--- a/src/index.css
+++ b/src/index.css
@@ -528,7 +528,6 @@ body {
     height: 5.5rem;
     grid-template-columns: repeat(3, 6rem);
     grid-template-rows: repeat(12, 25px);
-    outline: 1px solid black;
   }
 
   .indIngrdt {
@@ -572,5 +571,176 @@ body {
   .cancelBtn {
     left: 57%;
     bottom: 10.5px;
+  }
+}
+
+
+@media screen and (min-width: 850px) {
+  .mainHeader {
+    height: 3.8rem;
+  }
+
+  .appHeading {
+    top: -8px;
+    left: 3rem;
+    font-size: 26px;
+  }
+
+  .searchBtnClsd {
+    font-size: 26px;
+    right: 3.5rem;
+    top: 18px;
+  }
+
+  .searchbarCntr {
+    height: 1.7rem;
+    width: 25rem;
+    right: 3rem;
+    top: 20px;
+  }
+
+  .searchbar {
+    /* outline: 1px solid black; */
+    left: 8px;
+    bottom: 18px;
+    width: 20rem;
+    font-size: 17px;
+  }
+
+  .searchBtn {
+    left: 33px;
+    bottom: 5px;
+    font-size: 24px;
+    padding: 7px 12px 7px 7px;
+  }
+
+  .createRecipeBtn { font-size: 22px; }
+
+  .recipeNameInput {
+    top: 7px;
+    width: 18rem;
+    height: 1.4rem;
+    font-size: 15px;
+    padding: 2px 6px;
+  }
+
+  .createRecipeCntr .addIngrdtCntr { 
+    top: 12px;
+  }
+
+  .createRecipeCntr .indIngrdtAdd {
+    left: 6px;
+  }
+
+  .createRecipeCntr .addIngrdtInput {
+    height: 1.4rem;
+    width: 15rem;
+    padding: 2px 6px; 
+  }
+
+  .createRecipeCntr .addIngrdtBtn {
+    letter-spacing: 5px;
+    font-size: 18px;
+    padding: 2px 6px;
+  }
+
+  .createRecipeCntr .ingrdtsCntr { top: 20px;}
+
+  .createCnclBtns { 
+    height: 4rem;
+    width:  18rem;
+  }
+
+  .createBtn {
+    top: 28px;
+    height: 1.6rem;
+    width: 6rem;
+    font-size: 19px;
+  }
+
+  .createRecipeCntr .cancelBtn {
+    top: 28px;
+    height: 1.6rem;
+    width: 6rem;
+    font-size: 19px;
+  }
+
+  .indRecipeClsd, .indRecipeOpen, .indRecipeEdit {
+    width: 25rem;
+  }
+
+  .recipeName {
+    letter-spacing: 5px;
+    font-size: 28px;
+  }
+
+  .editBtn {
+    left: 37%;
+    width: 5rem;
+    font-size: 20px;
+  }
+
+  .removeBtn {
+    bottom: 13px;
+    width: 6.2rem;
+    font-size: 20px;
+  }
+
+  .ingrdtsHeading {
+    bottom: 8px;
+    font-size: 19px;
+    letter-spacing: 3px;
+  }
+
+  .ingrdtsCntr {
+    height: 7rem;
+    grid-template-columns: repeat(4, 6.2rem);
+    grid-template-rows: repeat(12, 25px);
+    /* outline: 1px solid black; */
+  }
+
+  .indIngrdt {
+    font-size: 17px;
+    left: 8px;
+    letter-spacing: 1px;
+    /* outline: 1px solid black; */
+  }
+
+  .addIngrdtInput {
+    font-size: 17px
+  }
+
+  .addIngrdtBtn {
+    width: 4.5rem;
+    font-size: 17px;
+    letter-spacing: 4px;
+  }
+
+  .indRecipeEdit .ingrdtsCntr {
+    left: 5px;
+    width: 24.4rem;
+    grid-template-columns: repeat(4, 6.15rem);
+    grid-template-rows: repeat(12, 27px);
+  }
+
+  .indIngrdtAdd {
+    left: 2px;
+    width: 5.3rem;
+    font-size: 15px;
+  }
+
+  .indIngrdtAdd p {
+    font-size: 14px;
+  }
+
+  .confirmBtn, .cancelBtn {
+    left: 11%;
+    width: 6.7rem;
+    font-size: 20px;
+  }
+
+  .cancelBtn {
+    left: 57%;
+    bottom: 13px;
   }
 }
