--- a/src/index.css
+++ b/src/index.css
@@ -358,6 +358,7 @@ body {
   height: 1.2rem;
   width: 4.5rem; 
   display: flex;
+  justify-content: space-between;
   font-size: 12px;
   font-weight: 600;
   line-height: 20px;
